k8s/dev-stack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-local-deployment
  labels:
    app: apache-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-local
  template:
    metadata:
      labels:
        app: apache-local
    spec:
      containers:
        - name: local
          image: apache-local:latest
          imagePullPolicy: Never
          ports:
            - name: local-http
              containerPort: 80
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html

      # emptyDir volumes are fine for single-replica development deployments
      volumes:
        - name: www-data
          hostPath:
            path: /mnt/www
            type: Directory
