k8s/dev-stack-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-local-pod
  labels:
    app: apache-local
spec:
  restartPolicy: Always
  containers:
    - name: apache-local
      image: apache-local:latest
      imagePullPolicy: Never
      ports:
        - name: local-http
          containerPort: 80
      volumeMounts:
        - name: www-data
          mountPath: /var/www/html
  volumes:
    - name: www-data
      hostPath:
        path: /mnt/www
        type: Directory
      #emptyDir: {}
