k8s/dev-apache-stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-local-headless
  labels:
    app: dev-local
spec:
  clusterIP: None
  selector:
    app: dev-local
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dev-local
  labels:
    app: dev-local
spec:
  serviceName: dev-local-headless
  replicas: 1
  selector:
    matchLabels:
      app: dev-local
  template:
    metadata:
      labels:
        app: dev-local
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: local
          image: apache-local:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html
            - name: php-config
              mountPath: /usr/local/etc/php/conf.d
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: www-data
        labels:
          app: dev-local
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: standard
    - metadata:
        name: php-config
        labels:
          app: dev-local
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
