k8s/dev-stack-services.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: dev-stack-mysql
#   labels:
#     app: dev-stack
# spec:
#   type: ClusterIP
#   selector:
#     app: dev-stack
#   ports:
#     - name: mysql
#       port: 3306
#       targetPort: 3306
# ---
apiVersion: v1
kind: Service
metadata:
  name: dev-stack-local
  labels:
    app: dev-stack
spec:
  type: NodePort
  selector:
    app: apache-local
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
